@@ -18,6 +18,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+server/player.c: add out_of_map check to stand_near_hostile function.  This
+fixes a server crash if the player uses a hiding skill near the edge of a map.
+MSW 5/8/2000
+
 common/arch.c, common/loader.l (loader.c):  Modify the load routines
 to strip off trailing whitespace in object names and other_arch fields -
 I believe this is why altars to Sorig did not generally work, and while
